--- a/src/cr/ac/una/ingenieria/appMVC/Vista/ManteArticulos.form
+++ b/src/cr/ac/una/ingenieria/appMVC/Vista/ManteArticulos.form
@@ -7,6 +7,9 @@
     <Property name="maximizable" type="boolean" value="true"/>
     <Property name="resizable" type="boolean" value="true"/>
     <Property name="title" type="java.lang.String" value="MODULO INVENTARIO"/>
+    <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[750, 290]"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
